accept findbugs recommendation
git-svn-id: https://findbugs.googlecode.com/svn/trunk@5283 eae3c2d3-9b19-0410-a86e-396b6ccb6ab3